Added views to create/edit blog post inside the site

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -7,7 +7,7 @@
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
     font-size: 36pt;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .content {
